# reading-crafting-interpreters

./: README.md
chapters/: 01-intro.md  02-map-territory.md  03-lox-language.md
src/first-lox-interpreter/: README.rst  pyproject.toml
src/first-lox-interpreter/first_lox_interpreter/: __init__.py  lox.py
src/first-lox-interpreter/first_lox_interpreter/utils/: cli.py
src/first-lox-interpreter/tests/: test_first_lox_interpreter.py
